--- a/local/props.conf
+++ b/local/props.conf
@@ -111,3 +111,11 @@ EVAL-severity = if(isnotnull(body),"unknown", severity)
 [bro_smtp]
 LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
 
+[bro_x509]
+FIELDALIAS-id = id AS flow_id
+
+[bro_weird]
+FIELDALIAS-wid = uid AS flow_id
+
+[bro_files]
+FIELDALIAS-sapp = source AS app
