--- a/local/props.conf
+++ b/local/props.conf
@@ -50,7 +50,6 @@ FIELDALIAS-host = extracted_host AS dest_host
 #FIELDALIAS-last_reply =
 #FIELDALIAS-local_orig
 FIELDALIAS-mailfrom = mailfrom AS src_user
-#FIELDALIAS-md5 =
 FIELDALIAS-method = method AS http_method
 #FIELDALIAS-mime_desc =
 #FIELDALIAS-mime_type =
@@ -94,10 +93,8 @@ FIELDALIAS-TC  = TC AS flag
 #FIELDALIAS-tunnel_parents
 FIELDALIAS-uid = uid AS flow_id
 FIELDALIAS-uri  = uri AS url
-#FIELDALIAS-user =
 FIELDALIAS-user_agent = user_agent AS http_user_agent
 FIELDALIAS-username = username as user
-#FIELDALIAS-x_originating_ip =
 FIELDALIAS-src_mac = mac AS src_mac
 FIELDALIAS-lease_duration = lease_time AS lease_duration
 
@@ -111,6 +108,9 @@ EVAL-severity = if(isnotnull(body),"unknown", severity)
 [bro_smtp]
 LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
 
+[bro_ssl]
+FIELDALIAS-cipher = cipher AS ssl_cipher_name
+
 [bro_x509]
 FIELDALIAS-id = id AS flow_id
 
@@ -119,3 +119,5 @@ FIELDALIAS-wid = uid AS flow_id
 
 [bro_files]
 FIELDALIAS-sapp = source AS app
+FIELDALIAS-md5 = md5 AS ssl_cert_md5
+FIELDALIAS-sha1 = sha1 AS ssl_cert_sha1
