--- a/local/props.conf
+++ b/local/props.conf
@@ -91,7 +91,8 @@ FIELDALIAS-TC  = TC AS flag
 #FIELDALIAS-trans_depth =
 #FIELDALIAS-ts =
 #FIELDALIAS-tunnel_parents
-FIELDALIAS-uid = uid AS flow_id
+#FIELDALIAS-uid = uid AS flow_id
+FIELDALIAS-fuid = 
 FIELDALIAS-uri  = uri AS url
 FIELDALIAS-user_agent = user_agent AS http_user_agent
 FIELDALIAS-username = username as user
@@ -112,7 +113,7 @@ LOOKUP-protocol_for_bro_smtp = bro_protocol_lookup sourcetype OUTPUT protocol
 FIELDALIAS-cipher = cipher AS ssl_cipher_name
 
 [bro_x509]
-FIELDALIAS-id = id AS flow_id
+FIELDALIAS-id = id AS fuid
 
 [bro_weird]
 FIELDALIAS-wid = uid AS flow_id
@@ -121,3 +122,4 @@ FIELDALIAS-wid = uid AS flow_id
 FIELDALIAS-sapp = source AS app
 FIELDALIAS-md5 = md5 AS ssl_cert_md5
 FIELDALIAS-sha1 = sha1 AS ssl_cert_sha1
+FIELDALIAS-cuid = conn_uids{} AS uid
