added appropriate tags for DNS logs

--- a/local/tags.conf
+++ b/local/tags.conf
@@ -6,3 +6,8 @@ ssl = enabled
 
 [eventtype=bro_x509_et]
 ssl = enabled
+
+[eventtype=bro_dns_et]
+dns = enabled
+resolution = enabled
+network = enabled
